responsive design for mobile

--- a/views/onboardHomepage.ejs
+++ b/views/onboardHomepage.ejs
@@ -81,7 +81,7 @@
     </section>
 
     <footer>
-        <p>Copyright @ 2023</p> 
+        <p>Developed by Mikael Borneo</p> 
     </footer>
 </body>
 </html>
