--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,7 +48,6 @@ header{
 
 #modules article{
     border: 4px solid green;
-    height: fit-content;
     width: 600px;
     height: 400px;
     display: flex;
@@ -65,6 +64,7 @@ header{
     font-size: .8em;
 }
 #modules article h4{
+    text-align: center;
     font-size: .6em;
     text-decoration: underline;
 }
@@ -119,6 +119,7 @@ header{
     padding: 2%;
 }
 #moreInfoSignup h1{
+    text-align: center;
     font-size: 50px;   
 }
 
@@ -165,5 +166,35 @@ footer p{
     color: white;
     padding-bottom: .5em;
 }
-/* ----- TOP ----- */
+
+
+/* ----- Width = 390px ----- */
+@media only screen and (min-width: 320px) and (max-width: 479px){
+    header{
+        text-align: center;
+    }
+    #logo{
+        width: 100vw;
+    }
+    #modules{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+    
+    #modules #header{
+        margin: 10px;
+    }
+    
+    #modules article{
+        height: fit-content;
+        margin-bottom: 10px;
+    }
+
+    #modules article p{
+        line-height: 1.5em;
+    }
+    
+}
 /* ----- TOP ----- */
