adjust responsive design

--- a/views/onboardHomepage.ejs
+++ b/views/onboardHomepage.ejs
@@ -12,7 +12,7 @@
 <body>
     <header>
         <h1 id="logo">&#123onboard&#125</h1>
-        <button id="learnMore">Learn More</button>
+        <a href="#moreInfoSignup"><button id="learnMore">Contact Us</button></a>
     </header>
 
     <section id="description">
