color scheme change

--- a/views/onboardHomepage.ejs
+++ b/views/onboardHomepage.ejs
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h1 id="logo">&#123onboard&#125</h1>
+        <h1 id="logo">&#123 &#125 <span>onboard</span></h1>
         <a href="#moreInfoSignup"><button id="learnMore">Contact Us</button></a>
     </header>
 
@@ -105,7 +105,7 @@
                 <input name="lastName" id="lastName" type="text" placeholder="Last Name" required>
             </div>
             <div>
-                <input name="email" id="email" type="email" placeholder="Email address" required>
+                <input name="email" id="email" type="email" placeholder="Email" required>
             </div>
             <div>
                 <input name="mobile" id="mobile" type="text" placeholder=" Mobile (xxx-xxx-xxxx)" required>
