--- a/public/css/styleDesktop.css
+++ b/public/css/styleDesktop.css
@@ -5,7 +5,8 @@
 }
 
 body{
-    background: linear-gradient(180deg, #000000 20px, #FFFFFF 100%);
+    background-image: url("../Resources/mainBackground.jpeg");
+    background-size: cover;
     height: fit-content;
     display: flex;
     justify-content: flex-start;
@@ -15,6 +16,7 @@ body{
 
 /* ----- TOP ----- */
 header{
+    background-color: lightslategray;
     width: 100vw;
     height: fit-content;
     display: flex;
@@ -31,19 +33,23 @@ header{
     padding: 8px;
     margin-left: 60px;   
 }
+#logo span{
+    color: black;
+}
 
 #learnMore{
     height: 48px;
     width: 176px;
     margin-right: 60px;
     border-radius: 16px;
-    background-color: #003fc2;
+    background-color: black;
     color: white;
     font-size: 24px;
 }
 
 /* ----- DESCRIPTION ----- */
 #description{
+    background-color: #E0E0E4;
     width: 100vw;
     height: fit-content;
     display: flex;
@@ -58,7 +64,7 @@ header{
     justify-content: center;
     align-items: flex-start;
     flex-direction: column;
-    color: white;
+    color: black;
 
 }
 
@@ -100,7 +106,8 @@ header{
     justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
-    margin: 8px 0px;
+    padding: 8px;
+    border-bottom: 2px solid black;
 }
 
 #modules article{
@@ -134,13 +141,14 @@ header{
 
 /* ----- LIST ----- */
 #list{
+    background-color: #E0E0E4;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     flex-wrap: wrap;
     height: fit-content;
     width: 100vw;
-    margin: 8px 0px;
+    padding: 8px;
     border-bottom: 2px solid black;
 }
 #phraseTwo img{
@@ -208,8 +216,7 @@ header{
 #moreInfoSignup form{
     border-radius: 12px;
     padding: 10px;
-    background-color: gray;
-
+    background-color: lightslategray;
 }
 #moreInfoSignup form div input{
     font-size: 25px;
@@ -231,7 +238,7 @@ header{
 #signupBtn button{
     font-size: 24px;
     padding: 0.5em;
-    background-color: #003fc2;
+    background-color: black;
     color: white;
     border-radius: 16px;
 }
@@ -242,16 +249,15 @@ header{
 footer{
     width: 100vw;
     height: fit-content;
-    background-color: #020202;
+    background-color: lightslategray;
     display: flex;
     justify-content: space-around;
     align-items: flex-end;
 }
 
 footer p{
-    background-color: black;
     font-size: 20px;
     color: white;
-    padding-bottom: .5em;
+    padding: .5em auto;
 }
 
