--- a/public/css/styleMobile.css
+++ b/public/css/styleMobile.css
@@ -6,7 +6,8 @@
     }
     
     body{
-        background: linear-gradient(180deg, #000000 10px, #FFFFFF 100%);
+        background-image: url("../Resources/mainBackground.jpeg");
+        background-size: cover;
         height: fit-content;
         display: flex;
         justify-content: flex-start;
@@ -16,6 +17,7 @@
     
     /* ----- TOP ----- */
     header{
+        background-color: lightslategray;
         width: 100vw;
         height: fit-content;
         display: flex;
@@ -38,6 +40,7 @@
     
     /* ----- DESCRIPTION ----- */
     #description{
+        background-color: #E0E0E4;
         width: 100vw;
         height: fit-content;
         display: flex;
@@ -53,7 +56,7 @@
         justify-content: center;
         align-items: flex-start;
         flex-direction: column;
-        color: white;
+        color: black;
         width: 300px;
         margin: 16px 0px 16px 8px;
     
@@ -97,7 +100,8 @@
         justify-content: space-evenly;
         align-items: center;
         flex-wrap: wrap;
-        margin: 8px 0px;
+        padding: 8px;
+        border-bottom: 2px solid black;
     }
     
     #modules article{
@@ -131,6 +135,7 @@
     
     /* ----- LIST ----- */
     #list{
+        background-color: #E0E0E4;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -205,7 +210,7 @@
     #moreInfoSignup form{
         border-radius: 12px;
         padding: 10px;
-        background-color: gray;
+        background-color: lightslategray;
         width: 90vw;
     
     }
@@ -231,7 +236,7 @@
     #signupBtn button{
         font-size: 24px;
         padding: 0.5em;
-        background-color: #003fc2;
+        background-color: black;
         color: white;
         border-radius: 16px;
     }
@@ -242,7 +247,7 @@
     footer{
         width: 100vw;
         height: fit-content;
-        background-color: #020202;
+        background-color: lightslategray;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -250,10 +255,9 @@
     }
     
     footer p{
-        background-color: black;
         font-size: 20px;
         color: white;
-        padding-bottom: .5em;
+        padding: .5em auto;
     }
     
 }
