--- a/public/css/styleTablet.css
+++ b/public/css/styleTablet.css
@@ -6,7 +6,8 @@
     }
     
     body{
-        background: linear-gradient(180deg, #000000 10px, #FFFFFF 100%);
+        background-image: url("../Resources/mainBackground.jpeg");
+        background-size: cover;
         height: fit-content;
         display: flex;
         justify-content: flex-start;
@@ -16,6 +17,7 @@
     
     /* ----- TOP ----- */
     header{
+        background-color: lightslategray;
         width: 100vw;
         height: fit-content;
         display: flex;
@@ -38,13 +40,14 @@
         width: 176px;
         margin-right: 60px;
         border-radius: 16px;
-        background-color: #003fc2;
+        background-color: black;
         color: white;
         font-size: 24px;
     }
     
     /* ----- DESCRIPTION ----- */
     #description{
+        background-color: #E0E0E4;
         width: 100vw;
         height: fit-content;
         display: flex;
@@ -60,7 +63,7 @@
         justify-content: center;
         align-items: flex-start;
         flex-direction: column;
-        color: white;
+        color: black;
         width: fit-content;
         margin: 16px 0px;
     
@@ -104,7 +107,8 @@
         justify-content: space-evenly;
         align-items: center;
         flex-wrap: wrap;
-        margin: 8px 0px;
+        padding: 8px;
+        border-bottom: 2px solid black;
     }
     
     #modules article{
@@ -138,6 +142,7 @@
     
     /* ----- LIST ----- */
     #list{
+        background-color: #E0E0E4;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -211,7 +216,7 @@
     #moreInfoSignup form{
         border-radius: 12px;
         padding: 10px;
-        background-color: gray;
+        background-color: lightslategray;
     
     }
     #moreInfoSignup form div input{
@@ -234,7 +239,7 @@
     #signupBtn button{
         font-size: 24px;
         padding: 0.5em;
-        background-color: #003fc2;
+        background-color: black;
         color: white;
         border-radius: 16px;
     }
@@ -245,17 +250,16 @@
     footer{
         width: 100vw;
         height: fit-content;
-        background-color: #020202;
+        background-color: lightslategray;
         display: flex;
         justify-content: space-around;
         align-items: flex-end;
     }
     
     footer p{
-        background-color: black;
         font-size: 20px;
         color: white;
-        padding-bottom: .5em;
+        padding: .5em auto;
     }
     
 }
